# NiumCoPilot

./: README.md  nium_all_urls_exhaustive.csv  package.json
apps/web/: next-env.d.ts  next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/ask/: route.ts
apps/web/components/: ChatSection.tsx  Hero.tsx  IntegrationStatus.tsx  PipelineDiagram.tsx  SeedDocsTable.tsx  ThemeRegistry.tsx
apps/web/lib/: knowledge.ts
services/api/: pyproject.toml
services/api/nium_api_demo/: main.py
