[project]
name = "nium_api_demo"
version = "0.1.0"
description = "Demo FastAPI backend for Nium intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.111",
    "uvicorn[standard]~=0.30",
    "pydantic~=2.9",
    "python-dotenv~=1.0",
    "pandas~=2.2"
]

[project.optional-dependencies]
dev = ["pytest~=8.3", "httpx~=0.27"]

[tool.uvicorn]
app = "nium_api_demo.main:app"
host = "0.0.0.0"
port = 8000
reload = true